<resources>
    <string name="app_name">Gitsterz</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Username</string>
    <string name="username_user">Username</string>
    <string name="name">Name</string>
    <string name="tab_text_1">Repository</string>
    <string name="tab_text_2">Followers</string>
    <string name="tab_text_3">Following</string>
    <string name="username">Username</string>
    <string name="city">City</string>
    <string name="repos_name">Repository Name</string>
    <string name="company">Company</string>
    <string name="language_settings">Language Settings</string>
    <string name="app_logo_s">App Logo\'s</string>
    <string name="alert_message">Please connect your phone to the Internet!!!</string>
    <string name="detail">Detail User</string>
    <string name="go_back">Go Back</string>
    <string name="oops_no_internet">Oops! No Internet!</string>
    <string name="favorite_s_user">Favorites User</string>
    <string name="set_application_reminder">Set Application Reminder</string>
    <string name="on_reminder">Your Reminder has been activated</string>
    <string name="off_reminder">Your reminder was Off</string>
    <string name="reminder">Reminder</string>
    <string name="other_settings">Other Settings</string>
    <string name="search_empty">Write Something!</string>
    <string name="cancel_alarm">"Alarm Reminder has been cancelled! "</string>
    <string name="set_alarm">"Alarm Reminder set up succeed! "</string>

    <style name="header1">
        <item name="android:layout_width">25dp</item>
        <item name="android:layout_height">25dp</item>
        <item name="android:layout_gravity">center</item>
        <item name="android:layout_marginLeft">10dp</item>
        <item name="color">@color/white</item>
    </style>

    <style name="value">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:layout_weight">0.5</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <string name="settings">Settings</string>
    <string name="alarm_message">Gitsterz Reminder</string>
    <string name="image_avatar">Image Avatar</string>
    <string name="user_url">User URL</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="widget_favorites">Widget Favorites</string>
    <string name="logo_gitsterz">Logo Gitsterz</string>
    <string name="share_menu">Share Menu</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="title_favorite">favorite</string>
</resources>