<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="monospace"
                android:text="@string/set_application_reminder"
                android:textOff="@string/on_reminder"
                android:textOn="@string/off_reminder" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_settings"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_settings"
                android:backgroundTint="@color/white"
                android:textColor="@color/app_color"
                android:textAlignment="textStart"
                android:fontFamily="monospace"
                app:icon="@drawable/ic_languge"
                app:iconTint="@color/app_color"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</LinearLayout>