<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Gitsterz">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/detail"
            app:expandedTitleGravity="right|top"
            app:collapsedTitleGravity="left">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <ToggleButton
                            android:id="@+id/toggleButton"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="24dp"
                            android:textOn=""
                            android:textOff=""
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:background="@drawable/favorites_toggle"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/avatarDetail"
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="8dp"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="2dp"
                            tools:src="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/nameDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            tools:text="@string/name" />

                        <TextView
                            android:id="@+id/usernameDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:text="@string/username" />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:contentDescription="@string/company"
                                    style="@style/header1"
                                    android:src="@drawable/com" />

                                <TextView
                                    android:id="@+id/companyDetail"
                                    style="@style/value"
                                    tools:text="@string/company" />

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:contentDescription="@string/city"
                                    style="@style/header1"
                                    android:src="@drawable/loca" />

                                <TextView
                                    android:id="@+id/city"
                                    style="@style/value"
                                    tools:text="@string/city" />

                            </TableRow>
                        </TableLayout>

                    </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressbar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:background="@drawable/round_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>